<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_collapsing_tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pamobo0609.demo.view.activity.CollapsingTabsActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/abl_collapsing_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/ctl_collapsing_tabs"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                app:layout_scrollFlags="scroll|snap">

                <ImageView
                    android:id="@+id/img_expanded_tabs_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/msg_just_the_background_for_the_expanded_toolbar"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/material_flat" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/collapsing_tabs_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|snap">

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

            <LinearLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_by"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

            </LinearLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tl_tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v4.view.ViewPager>

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>